[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UIpack_RPG/PNG/panel_brown.png" type="Texture" id=1]
[ext_resource path="res://Game/UI/ItemSlot.gd" type="Script" id=2]
[ext_resource path="res://Game/UI/CharacterContainer.gd" type="Script" id=3]
[ext_resource path="res://Assets/UIpack_RPG/PNG/panelInset_beige.png" type="Texture" id=4]
[ext_resource path="res://Game/UI/Inventory.gd" type="Script" id=8]
[ext_resource path="res://Game/UI/ItemContainer.gd" type="Script" id=10]

[node name="Inventory" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory background" type="NinePatchRect" parent="."]
margin_left = 128.0
margin_top = 64.0
margin_right = 320.0
margin_bottom = 256.0
texture = ExtResource( 1 )
patch_margin_left = 68
patch_margin_top = 26
patch_margin_right = 23
patch_margin_bottom = 36
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item container" type="NinePatchRect" parent="Inventory background"]
margin_left = 16.0
margin_top = 16.0
margin_right = 176.0
margin_bottom = 176.0
texture = ExtResource( 4 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotsContainer" type="ScrollContainer" parent="Inventory background/Item container"]
margin_left = 8.0
margin_top = 8.0
margin_right = 152.0
margin_bottom = 152.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slots" type="GridContainer" parent="Inventory background/Item container/SlotsContainer"]
custom_constants/vseparation = 1
custom_constants/hseparation = 1

[node name="Character background" type="NinePatchRect" parent="."]
margin_left = 376.0
margin_top = 64.0
margin_right = 512.0
margin_bottom = 256.0
texture = ExtResource( 1 )
patch_margin_left = 56
patch_margin_top = 32
patch_margin_right = 33
patch_margin_bottom = 36
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character container" type="NinePatchRect" parent="Character background"]
margin_left = 16.0
margin_top = 16.0
margin_right = 120.0
margin_bottom = 176.0
texture = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotHead" type="Panel" parent="Character background/Character container"]
margin_left = 40.0
margin_top = 24.0
margin_right = 64.0
margin_bottom = 48.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotTorso" type="Panel" parent="Character background/Character container"]
margin_left = 40.0
margin_top = 56.0
margin_right = 64.0
margin_bottom = 80.0
script = ExtResource( 2 )

[node name="SlotLegs" type="Panel" parent="Character background/Character container"]
margin_left = 40.0
margin_top = 88.0
margin_right = 64.0
margin_bottom = 112.0
script = ExtResource( 2 )

[node name="SlotFeet" type="Panel" parent="Character background/Character container"]
margin_left = 40.0
margin_top = 120.0
margin_right = 64.0
margin_bottom = 144.0
script = ExtResource( 2 )

[node name="SlotRHand" type="Panel" parent="Character background/Character container"]
margin_left = 8.0
margin_top = 56.0
margin_right = 32.0
margin_bottom = 80.0
script = ExtResource( 2 )

[node name="SlotLHand" type="Panel" parent="Character background/Character container"]
margin_left = 72.0
margin_top = 56.0
margin_right = 96.0
margin_bottom = 80.0
script = ExtResource( 2 )
